styles.css
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/* CSS VARIABLES FOR MARGIN, FONTS AND COLOROS */
:root {
  /* SPACING */
  --space-1: 0.5rem;
  --space-2: 1rem;
  --space-3: 1.5rem;
  --space-4: 2rem;
  --space-5: 3rem;

  /* COLORS */
  --electric-aqua: #00649e9f;
  --graphite: #363635ff;
  --ebony: #595a4aff;
  --vibrant-coral: rgba(255, 142, 255, 0.774);
  --cloudy-aqua: #3aa0d8;

  --color-bg: #f7f7f7;
  --color-surface: #f5f5f5;
  --color-text: var(--graphite);
  --color-text-muted: var(--ebony);
  --color-primary: var(--electric-aqua);
  --color-secondary: var(--vibrant-coral);
  --color-primary-compliment: var(var(--cloudy-aqua));
  --color-border: #e2e2e2;

  /* FONTS */
  --fs-sm: 0.875rem;
  --fs-base: 1rem;
  --fs-lg: 1.25rem;
  --fs-xl: 1.5rem;
  --fs-2xl: 2.25rem;
  --fs-3xl: 3rem;
}

@font-face {
  font-family: "logo-font";
  src: url(./src/Permanent_Marker/PermanentMarker-Regular.ttf);
}

body {
  background-color: var(--color-bg);
  font-size: var(--fs-base);
}

.main-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

.border-angled {
  border: 1px solid var(--color-border);
  border-radius: var(--space-2);
}

.drop-shadow {
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
}

.muted-text {
  color: var(--color-text-muted);
}

.grid-card {
  background-color: var(--color-bg);
  padding: var(--space-3);
}

.logo-wrapper {
  margin: 0;
  display: flex;
  justify-content: center;
  background: linear-gradient(135deg, #00649e, #0a7bbd, #3aa0d8);
  width: 100%;
}

.logo {
  font-family: "logo-font";
  width: 24rem;
  display: flex;
  justify-content: center;
  font-size: var(--fs-3xl);
  font-weight: 200;
  color: var(--color-secondary);
}

.logo.border-angled {
  border: 0px;
}

.page-content {
  width: 100vw;
  height: 100%;
  background-color: var(--color-surface);
  display: grid;
  grid-template-columns: 2fr 1fr 1fr 1fr;
  grid-template-rows: minmax(0, 1fr) minmax(0, 4fr);
  gap: var(--space-3);
  padding: var(--space-3);
}

.home-city-section {
  grid-area: 1/4/1/4;
  background: linear-gradient(
    45deg,
    var(--vibrant-coral),
    rgb(255, 104, 187) 70%
  );
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.search-section {
  grid-area: 1/1/1/4;
  background: linear-gradient(-90deg, var(--vibrant-coral), var(--cloudy-aqua)),
    rgba(255, 217, 0, 0);
  display: flex;
  justify-content: center;
  align-items: center;
}

.weather-section {
  grid-area: 2/1/2/4;
  background: linear-gradient(
    315deg,
    var(--electric-aqua),
    var(--cloudy-aqua),
    #7fc4eb
  );

  display: grid;
  gap: var(--space-2);
  grid-template-rows: 5fr 2fr;
  grid-template-columns: 4fr 1fr;
}

.places-listed {
  background: linear-gradient(
    210deg,
    rgb(255, 104, 187) 10%,
    var(--electric-aqua) 60%
  );
  grid-area: 2/4/2/4;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

#weather-form {
  min-width: 80%;
}

.search-bar {
  display: flex;
  padding: var(--space-1);
  background-color: var(--color-bg);
  font-size: var(--fs-xl);
  justify-content: space-between;
  margin: 1rem 8rem;
}

input {
  all: unset;
  border: none;
  background-color: var(--color-bg);
  width: 100%;
}

input::placeholder {
  transition: opacity 0.2s;
}

input:focus::placeholder {
  opacity: 0;
}

.search-bar-btn {
  border: none;
  background-color: var(--color-bg);
  transition: all 0.3s;
  border-radius: 8px;
  padding: var(--space-1) var(--space-3);
  margin-right: var(--space-1);
}

.search-bar-btn:hover {
  background-color: #dddddd;
  cursor: pointer;
}

.search-icon {
  width: 1.5rem;
}

.listed-place {
  display: flex;
  flex-direction: column;
  padding: var(--space-1) var(--space-2);
  font-size: var(--fs-xl);
}
.footer {
  width: 100%;
  height: 5vh;
  background: linear-gradient(135deg, #00649e, #0a7bbd, #3aa0d8);
}

.current-home-city {
  font-size: var(--fs-2xl);
}

.homeIcon {
  width: 2.75rem;
  opacity: 0.7;
}

.flex-container-home {
  display: flex;
  width: 60%;
  justify-content: space-around;
}

.change-current-city-btn {
  border: none;
  background-color: rgba(236, 236, 236, 0.274);
  transition: all 0.3s;
  border-radius: 8px;
  width: 70%;
  padding: var(--space-1) var(--space-2);
  font-size: var(--fs-lg);
  color: var(--color-text-muted);
  cursor: pointer;
}

.change-current-city-btn:hover {
  background-color: rgba(132, 213, 250, 0.589);
}

.main-weather-card {
  display: flex;
}

.main-weather-card-info-container {
  display: flex;
  flex-direction: column;
  margin: 0 0 0 var(--space-3);
  padding: var(--space-2) var(--space-5);
  font-size: var(--fs-2xl);
}
.card-title {
  font-size: var(--fs-3xl);
}

.main-weather-temp {
  font-size: var(--fs-3xl);
  margin-left: var(--space-2);
}

.main-weather-card-info {
  padding-left: var(--space-4);
}

.daily-weather-card {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: 80px;
  grid-area: 1/2/3/3;
  overflow-y: auto;

  gap: var(--space-2);
  padding: var(--space-1);
  font-size: var(--fs-lg);
}

.daily-grid-card {
  padding: var(--space-1);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hourly-weather-card {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 120px;
  height: 100%;
  gap: var(--space-2);
  padding: var(--space-1);
  font-size: var(--fs-lg);
}

.hourly-grid-card {
  padding: var(--space-1);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
/* 
zrobic fajne tlo z gradientu
zrobic tak ze jest ten search bar
napisac skrypt ktory bierze arg
w zaleznosci od pogody wybiera ikonke i tekst
zrobic tak zeby design byl ladny
search bar na srodku do pierwszego uzycia a po nim zmiana struktury strony i przeniesienie searchbara */

